Added new browsers support